Issue #10084 - Implementing fix for ee9